feat: A temperature unit toggle switch using React context; feat: A profile page route using React Router; feat: Form submission using controlled components; feat: set up a mock server and write code to make API calls

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,5 @@
 @import url("components/Profile/Profile.css");
 @import url("components/ItemCards/ItemCards.css");
 @import url("components/ItemModal/ItemDeleteConfirmationModel.css");
+@import url("components/Profile/Sidebar.css");
+@import url("components/Profile/ClothgesSection.css");
