--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,4 @@
 @import url("components/ItemModal/ItemDeleteConfirmationModel.css");
 @import url("components/Profile/Sidebar.css");
 @import url("components/Profile/ClothgesSection.css");
+@import url("components/Header/ToggleSwitch.css");
