feat: Add registration and authorization logic; feat: Add a current user context; feat: Add the editing profile logic; feat: Add likes and dislikes; feat: Implement sign out

--- a/src/components/Header/ToggleSwitch.css
+++ b/src/components/Header/ToggleSwitch.css
@@ -1,7 +1,7 @@
 .toggle-switch {
     display: flex;
     align-items: center;
-    margin: auto 20px auto auto;
+    margin: auto 0 auto auto;
     font-size: 0.875rem;
     line-height: 1;
     position: relative;
