--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,21 +20,28 @@
     margin: auto 0;
 }
 
+.header__button {
+    border: none;
+    padding: 0;
+    opacity: 1;
+    transition: opacity .3s ease-in-out;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.header__button:hover {
+    opacity: .6;
+}
+
 .header__text_date-loc {
     margin-top: 11px;
 }
 
-.header__add-clothes {
-    border: none;
-    padding: 0;
-    transition: opacity .3s ease-in-out;
-    cursor: pointer;
-    background-color: transparent;
-    margin-right: 20px;
-}
-
-.header__add-clothes:hover {
-    opacity: 0.6;
+.header__menu-bar {
+    display: flex;
+    gap: 20px;
+    margin-left: auto;
+    height: inherit;
 }
 
 .header__user {
