--- a/src/components/Header/ToggleSwitch.css
+++ b/src/components/Header/ToggleSwitch.css
@@ -1,99 +1,100 @@
 .toggle-switch {
-    display: flex;
-    align-items: center;
-    margin: auto 0 auto auto;
-    font-size: 0.875rem;
-    line-height: 1;
-    position: relative;
-    width: 54px;
-    height: 24px;
+  display: flex;
+  align-items: center;
+  margin: auto 0 auto auto;
+  font-size: 0.875rem;
+  line-height: 1;
+  position: relative;
+  width: 54px;
+  height: 24px;
 }
 
 .toggle-switch__checkbox {
-    opacity: 0;
-    width: 0;
-    height: 0;
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .toggle-switch__slider {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    border: 2px solid #00000080;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: opacity 0.3s ease-in-out;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border: 2px solid #00000080;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .toggle-switch__slider::before {
-    content: "";
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    color: #fff;
-    position: absolute;
-    width: 28px;
-    height: 28px;
-    background-color: #000;
-    border-radius: 50%;
-    top: -2px;
-    left: -2px;
-    transition: transform 0.7s, content 0.7s;
-    z-index: 1;
+  content: '';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: #fff;
+  position: absolute;
+  width: 28px;
+  height: 28px;
+  background-color: #000;
+  border-radius: 50%;
+  top: -2px;
+  left: -2px;
+  transition:
+    transform 0.7s,
+    content 0.7s;
+  z-index: 1;
 }
 
 .toggle-switch__slider-text {
-    position: absolute;
-    width: 28px;
-    height: 28px;
-    top: -2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #000;
-    opacity: .5;
-    z-index: 2;
-    pointer-events: none;
-    transition: opacity 0.7s ease;
+  position: absolute;
+  width: 28px;
+  height: 28px;
+  top: -2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #000;
+  opacity: 0.5;
+  z-index: 2;
+  pointer-events: none;
+  transition: opacity 0.7s ease;
 }
 
 .toggle-switch__slider-text:first-of-type {
-    left: -2px;
+  left: -2px;
 }
 
 .toggle-switch__slider-text:last-of-type {
-    left: 28px;
+  left: 28px;
 }
 
-.toggle-switch__checkbox:checked + .toggle-switch__slider::before{
-    transform: translateX(30px);
+.toggle-switch__checkbox:checked + .toggle-switch__slider::before {
+  transform: translateX(30px);
 }
 
 .toggle-switch__checkbox + .toggle-switch__slider .toggle-switch__slider-text:first-of-type {
-    color: #FFF;
-    opacity: 1;
+  color: #fff;
+  opacity: 1;
 }
 
 .toggle-switch__checkbox + .toggle-switch__slider .toggle-switch__slider-text:last-of-type {
-    color: #000;
-    opacity: .5;
+  color: #000;
+  opacity: 0.5;
 }
 
 .toggle-switch__checkbox:checked + .toggle-switch__slider .toggle-switch__slider-text:first-of-type {
-    color: #000;
-    opacity: .5;
+  color: #000;
+  opacity: 0.5;
 }
 
 .toggle-switch__checkbox:checked + .toggle-switch__slider .toggle-switch__slider-text:last-of-type {
-    color: #FFF;
-    opacity: 1;
+  color: #fff;
+  opacity: 1;
 }
 
-
 @media screen and (max-width: 768px) {
-    .toggle-switch {
-        margin: 0 auto 40px;
-    }
+  .toggle-switch {
+    margin: 0 auto 40px;
+  }
 }
