--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,74 +1,74 @@
 .item-card {
-    position: relative;
-    width: 100%;
-    aspect-ratio: 1/1;
+  position: relative;
+  width: 100%;
+  aspect-ratio: 1/1;
 }
 
 .item-card__button {
-    position: absolute;
-    padding: 0;
-    border: 1px solid #0000004D;
-    border-radius: 8px;
-    overflow: hidden;
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  padding: 0;
+  border: 1px solid #0000004d;
+  border-radius: 8px;
+  overflow: hidden;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
 }
 
 .item-card__img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: inherit;
 }
 
 .item-card__header {
-    position: absolute;
-    top: 17px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    z-index: 1;
+  position: absolute;
+  top: 17px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  z-index: 1;
 }
 
 .item-card__name {
-    margin: 0;
-    color: #00000099;
-    line-height: 1.25;
-    background-color: #FFF;
-    border-radius: 8px;
-    padding: 2px 12px;
+  margin: 0;
+  color: #00000099;
+  line-height: 1.25;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 2px 12px;
 }
 
 .item-card__like {
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    width: 18px;
-    height: 15px;
-    padding: 0;
-    transition: .3s ease-in-out;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  width: 18px;
+  height: 15px;
+  padding: 0;
+  transition: 0.3s ease-in-out;
 }
 
 .item-card__like_idle {
-    background-image: url("../../assets/Like-btn-idle.svg");
+  background-image: url('../../assets/Like-btn-idle.svg');
 }
 
 .item-card__like_selected {
-    background-image: url("../../assets/Like-btn-selected.svg");
+  background-image: url('../../assets/Like-btn-selected.svg');
 }
 
 .item-card__like:hover + .item-card__like_selected:hover {
-    opacity: .6;
+  opacity: 0.6;
 }
 
-@media screen and (max-width: 768px){
-    .item-card__name {
-        top: 7px;
-    }
+@media screen and (max-width: 768px) {
+  .item-card__name {
+    top: 7px;
+  }
 }
