--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,38 +1,38 @@
 .main__weather-today {
-    margin: 0;
-    padding-bottom: 34px;
+  margin: 0;
+  padding-bottom: 34px;
 }
 
-@media screen and (max-width: 768px){
-    .main__weather-today {
-        padding-bottom: 20px;
-    }
+@media screen and (max-width: 768px) {
+  .main__weather-today {
+    padding-bottom: 20px;
+  }
 
-    .main__randomize {
-        display: flex;
-        justify-content: center;
-        margin-top: 20px;
-        width: 100%;
-        height: 44px;
-        background-color: #000;
-        border: none;
-        border-radius: 4px;
-        color: #FFF;
-        transition: opacity .7s ease-in-out;
-        cursor: pointer;
-        padding: 12px 0;
-    }
+  .main__randomize {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    width: 100%;
+    height: 44px;
+    background-color: #000;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    transition: opacity 0.7s ease-in-out;
+    cursor: pointer;
+    padding: 12px 0;
+  }
 
-    .main__randomize:hover {
-        opacity: .6;
-    }
+  .main__randomize:hover {
+    opacity: 0.6;
+  }
 
-    .main__randomize-icon {
-        background-image: url("../../assets/Randomize-icon.svg");
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-color: transparent;
-        width: 12px;
-        margin-right: 8px;
-    }
+  .main__randomize-icon {
+    background-image: url('../../assets/Randomize-icon.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    width: 12px;
+    margin-right: 8px;
+  }
 }
