--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,74 +1,76 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    z-index: 3;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.5s ease, visibility 0.5s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: 3;
+  opacity: 0;
+  visibility: hidden;
+  transition:
+    opacity 0.5s ease,
+    visibility 0.5s ease;
 }
 
 .modal__overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.75);
-    transform: scale(0.95);
-    transition: transform 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.75);
+  transform: scale(0.95);
+  transition: transform 0.3s ease;
 }
 
 .modal_visible {
-    opacity: 1;
-    visibility: visible;
+  opacity: 1;
+  visibility: visible;
 }
 
 .modal_visible .modal__overlay {
-    transform: scale(1);
+  transform: scale(1);
 }
 
 .modal__container {
-    position: relative;
-    width: 35%;
-    background-color: #FFF;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  position: relative;
+  width: 35%;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
 }
 
 .modal__close-btn {
-    position: absolute;
-    background-image: url("../../assets/Close-black-icon.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: transparent;
-    border: none;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    opacity: .4;
-    transition: opacity .3s ease-in-out;
-    padding: 0;
-    z-index: 1;
-    top: 10px;
-    right: 10px;
+  position: absolute;
+  background-image: url('../../assets/Close-black-icon.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
+  border: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  opacity: 0.4;
+  transition: opacity 0.3s ease-in-out;
+  padding: 0;
+  z-index: 1;
+  top: 10px;
+  right: 10px;
 }
 
 .modal__close-btn:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .modal__text {
-    font-size: 1.25rem;
-    line-height: 1.2;
-    margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.2;
+  margin: 0;
 }
 
-@media screen and (max-width: 768px){
-    .modal__container {
-        width: 90%;
-    }
+@media screen and (max-width: 768px) {
+  .modal__container {
+    width: 90%;
+  }
 }
