--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,27 +1,27 @@
 .profile {
-    display: flex;
-    gap: 12%;
-    height: 100%;
-    margin-top: 47px;
+  display: flex;
+  gap: 12%;
+  height: 100%;
+  margin-top: 47px;
 }
 
 .profile__button {
-    border: none;
-    padding: 0;
-    opacity: 1;
-    transition: opacity .3s ease-in-out;
-    cursor: pointer;
-    background-color: transparent;
+  border: none;
+  padding: 0;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  cursor: pointer;
+  background-color: transparent;
 }
 
 .profile__button:hover {
-    opacity: .6;
+  opacity: 0.6;
 }
 
-@media screen and (max-width: 768px){
-    .profile {
-        flex-direction: column;
-        gap: 0;
-        margin: 0;
-    }
+@media screen and (max-width: 768px) {
+  .profile {
+    flex-direction: column;
+    gap: 0;
+    margin: 0;
+  }
 }
