--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -1,27 +1,27 @@
 .weather-card {
-    position: relative;
-    margin: 28px 0 40px;
-    height: 80px;
-    width: 100%;
+  position: relative;
+  margin: 28px 0 40px;
+  height: 80px;
+  width: 100%;
 }
 
 .weather-card__img {
-    width: inherit;
-    height: inherit;
-    position: absolute;
+  width: inherit;
+  height: inherit;
+  position: absolute;
 }
 
 .weather-card__temp {
-    position: absolute;
-    margin: 20px 0 20px 16px;
-    color: #FFF;
-    font-size: 2.25rem;
-    line-height: 1.1;
-    z-index: 1;
+  position: absolute;
+  margin: 20px 0 20px 16px;
+  color: #fff;
+  font-size: 2.25rem;
+  line-height: 1.1;
+  z-index: 1;
 }
 
-@media screen and (max-width: 768px){
-    .weather-card {
-        margin-bottom: 32px;
-    }
+@media screen and (max-width: 768px) {
+  .weather-card {
+    margin-bottom: 32px;
+  }
 }
