--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
-@import url("vendor/normalize.css");
-@import url("vendor/fonts.css");
-@import url("components/App/App.css");
-@import url("components/User/User.css");
-@import url("components/Header/Header.css");
-@import url("components/Main/Main.css");
-@import url("components/ItemCard/ItemCard.css");
-@import url("components/WeatherCard/WeatherCard.css");
-@import url("components/Footer/Footer.css");
-@import url("components/Modal/Modal.css");
-@import url("components/ItemModal/ItemModal.css");
-@import url("components/ModalWithForm/Form.css");
-@import url("components/Profile/Profile.css");
-@import url("components/ItemCards/ItemCards.css");
-@import url("components/ItemModal/ItemDeleteConfirmationModal.css");
-@import url("components/Profile/Sidebar.css");
-@import url("components/Profile/ClothgesSection.css");
-@import url("components/Header/ToggleSwitch.css");
+@import url('vendor/normalize.css');
+@import url('vendor/fonts.css');
+@import url('components/App/App.css');
+@import url('components/User/User.css');
+@import url('components/Header/Header.css');
+@import url('components/Main/Main.css');
+@import url('components/ItemCard/ItemCard.css');
+@import url('components/WeatherCard/WeatherCard.css');
+@import url('components/Footer/Footer.css');
+@import url('components/Modal/Modal.css');
+@import url('components/ItemModal/ItemModal.css');
+@import url('components/ModalWithForm/Form.css');
+@import url('components/Profile/Profile.css');
+@import url('components/ItemCards/ItemCards.css');
+@import url('components/ItemModal/ItemDeleteConfirmationModal.css');
+@import url('components/Profile/Sidebar.css');
+@import url('components/Profile/ClothgesSection.css');
+@import url('components/Header/ToggleSwitch.css');
